<resources>
    <string name="app_name">MadLevel5Task2</string>
    <string name="action_delete_all">Delete All</string>

    <!-- Labels -->
    <string name="navigation_home">Game Backlog</string>
    <string name="navigation_add_game">Add Game</string>

    <!-- Add Games Fragment -->
    <string name="title">Title</string>
    <string name="platform">Platform</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="date">Day / Month / Year</string>
    <string name="empty_field">Make sure non of the fields is empty!</string>
    <string name="invalid_date">Please enter a valid date!</string>

    <!-- Game Backlog -->
    <string name="release_date">Release:</string>
</resources>